# reflex-charts

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  main.py  pyproject.toml  rxconfig.py
custom_components/reflex_charts/: base.pyi  chart.pyi  helpers.py
docs/: usage.md
reflex_charts/: __init__.py  base.py  chart.py  constants.py  reflex_charts.py
reflex_charts/examples/: __init__.py  data.py
reflex_charts_demo/: .gitignore  requirements.txt  rxconfig.py
reflex_charts_demo/reflex_charts_demo/: __init__.py  reflex_charts_demo.py
scripts/: create_github_repo.sh
specs/: README.md
specs/api/: component-api-v1.md
specs/data-model/: chart-data-schemas.md
specs/phases/: phases.md
specs/plans/: implementation-plan.md
specs/prd/: reflex-charts-prd.md
specs/tasks/: task-breakdown.md
specs/technical/: architecture.md
tests/: test_components.py  test_constants.py  test_examples.py  test_helpers.py  test_imports.py  test_public_api.py
